# sfml_games

./: README.md
shape_avoidance/: CMakeLists.txt  README.md
shape_avoidance/include/: Enemy.hpp  Game.hpp  Player.hpp
shape_avoidance/src/: Enemy.cpp  Game.cpp  Player.cpp  main.cpp
shapes_game/: CMakeLists.txt  main.cpp
shapes_game/include/: Game.hpp
shapes_game/src/: Game.cpp  main.cpp
